<resources>
    <string name="app_name">TwoTouchMail</string>
    <string name="button_send">メールアプリ起動</string>
    <string name="subject">件名</string>
    <string name="mailTo">送信先選択</string>
    <string name="docomo">ドコモ</string>
    <string name="yahoo">Yahoo</string>
    <string name="gmail">Gmail</string>
    <string name="yuta">悠太</string>
    <string name="mail_to_docomo">gumsuke-nyaon4.0kg@docomo.ne.jp</string>
    <string name="mail_to_yahoo">gumsuke_nyaon@yahoo.co.jp</string>
    <string name="mail_to_gmail"></string>
    <string name="mail_to_yuta">09040942888</string>
    <string name="not_input_msg">メッセージを入力してください</string>
    <string name="error_title_msg">エラー</string>

</resources>
